--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,6 @@ name: build
 
 on: [push, pull_request]
 
-env:
-  PYTEST_ADDOPTS: "--color=yes"
-
 jobs:
   lint:
     name: Lint
@@ -37,7 +34,7 @@ jobs:
   deploy:
     name: Deploy
     environment: Deployment
-    needs: [test, lint]
+    needs: [lint]
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
 
