--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,31 +37,31 @@ jobs:
           poetry run pip install --upgrade pip
           poetry install
 
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.7
-      - name: Set Poetry cache
-        uses: actions/cache@v2
-        id: poetry-cache
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Upgrade Pip
-        run: python -m pip install --upgrade pip
-      - name: Install Poetry
-        run: python -m pip install poetry
-      - name: Install dependencies
-        run: |
-          poetry run pip install --upgrade pip
-          poetry install
-      - name: Run linters
-        run: poetry run invoke lint --diff
+#  lint:
+#    name: Lint
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.7
+#      - name: Set Poetry cache
+#        uses: actions/cache@v2
+#        id: poetry-cache
+#        with:
+#          path: ~/.cache/pypoetry/virtualenvs
+#          key: poetry-${{ hashFiles('**/poetry.lock') }}
+#      - name: Upgrade Pip
+#        run: python -m pip install --upgrade pip
+#      - name: Install Poetry
+#        run: python -m pip install poetry
+#      - name: Install dependencies
+#        run: |
+#          poetry run pip install --upgrade pip
+#          poetry install
+#      - name: Run linters
+#        run: poetry run invoke lint --diff
 
 
   deploy:
@@ -70,7 +70,6 @@ jobs:
     #needs: [lint]
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
-
     steps:
       - uses: actions/checkout@v2
       - name: Setup Python
@@ -89,7 +88,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PYPI_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
         run: |
-          echo "https://$GITHUB_TOKEN@github.com/${{ github.repository }}"
           git remote set-url origin https://$GITHUB_TOKEN@github.com/${{ github.repository }}
           autopub prepare
           poetry build
