--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -92,4 +92,5 @@ jobs:
           autopub prepare
           poetry build
           autopub commit
+          autopub githubrelease
           poetry publish -u __token__ -p $PYPI_PASSWORD
