--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,7 +80,7 @@ jobs:
         id: check_release
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry githubrelease httpx==0.16.1 autopub
+          python -m pip install poetry httpx==0.16.1 autopub
           echo "##[set-output name=release;]$(autopub check)"
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
@@ -92,5 +92,5 @@ jobs:
           autopub prepare
           poetry build
           autopub commit
-          autopub githubrelease
+          autpub githubrelease
           poetry publish -u __token__ -p $PYPI_PASSWORD
