--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,6 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9]
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -37,37 +36,10 @@ jobs:
           poetry run pip install --upgrade pip
           poetry install
 
-#  lint:
-#    name: Lint
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Set up Python
-#        uses: actions/setup-python@v2
-#        with:
-#          python-version: 3.7
-#      - name: Set Poetry cache
-#        uses: actions/cache@v2
-#        id: poetry-cache
-#        with:
-#          path: ~/.cache/pypoetry/virtualenvs
-#          key: poetry-${{ hashFiles('**/poetry.lock') }}
-#      - name: Upgrade Pip
-#        run: python -m pip install --upgrade pip
-#      - name: Install Poetry
-#        run: python -m pip install poetry
-#      - name: Install dependencies
-#        run: |
-#          poetry run pip install --upgrade pip
-#          poetry install
-#      - name: Run linters
-#        run: poetry run invoke lint --diff
-
-
   deploy:
     name: Deploy
     environment: Deployment
-    #needs: [lint]
+    needs: [test]
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
     steps:
@@ -92,5 +64,5 @@ jobs:
           autopub prepare
           poetry build
           autopub commit
-          autpub githubrelease
+          autopub githubrelease
           poetry publish -u __token__ -p $PYPI_PASSWORD
