--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.9]
+
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -36,10 +37,37 @@ jobs:
           poetry run pip install --upgrade pip
           poetry install
 
+#  lint:
+#    name: Lint
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: 3.7
+#      - name: Set Poetry cache
+#        uses: actions/cache@v2
+#        id: poetry-cache
+#        with:
+#          path: ~/.cache/pypoetry/virtualenvs
+#          key: poetry-${{ hashFiles('**/poetry.lock') }}
+#      - name: Upgrade Pip
+#        run: python -m pip install --upgrade pip
+#      - name: Install Poetry
+#        run: python -m pip install poetry
+#      - name: Install dependencies
+#        run: |
+#          poetry run pip install --upgrade pip
+#          poetry install
+#      - name: Run linters
+#        run: poetry run invoke lint --diff
+
+
   deploy:
     name: Deploy
     environment: Deployment
-    needs: [test]
+    #needs: [lint]
     runs-on: ubuntu-latest
     if: ${{ github.ref=='refs/heads/main' && github.event_name!='pull_request' }}
     steps:
@@ -52,7 +80,7 @@ jobs:
         id: check_release
         run: |
           python -m pip install --upgrade pip
-          python -m pip install poetry httpx==0.16.1 autopub
+          python -m pip install poetry githubrelease httpx==0.16.1 autopub
           echo "##[set-output name=release;]$(autopub check)"
       - name: Publish
         if: ${{ steps.check_release.outputs.release=='' }}
@@ -64,5 +92,5 @@ jobs:
           autopub prepare
           poetry build
           autopub commit
-          autopub githubrelease
-          poetry publish -u __token__ -p $PYPI_PASSWORD
+          
+        #poetry publish -u __token__ -p $PYPI_PASSWORD
