--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,38 +3,38 @@ name: build
 on: [push, pull_request]
 
 jobs:
-  test:
-    name: Test - ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.9]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Set up Pip cache
-        uses: actions/cache@v2
-        id: pip-cache
-        with:
-          path: ~/.cache/pip
-          key: pip-${{ hashFiles('**/pyproject.toml') }}
-      - name: Upgrade Pip
-        run: python -m pip install --upgrade pip
-      - name: Install Poetry
-        run: python -m pip install poetry
-      - name: Set up Poetry cache
-        uses: actions/cache@v2
-        id: poetry-cache
-        with:
-          path: ~/.cache/pypoetry/virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-      - name: Install dependencies
-        run: |
-          poetry run pip install --upgrade pip
-          poetry install
+#  test:
+#    name: Test - ${{ matrix.python-version }}
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        python-version: [3.9]
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Set up Python ${{ matrix.python-version }}
+#        uses: actions/setup-python@v2
+#        with:
+#          python-version: ${{ matrix.python-version }}
+#      - name: Set up Pip cache
+#        uses: actions/cache@v2
+#        id: pip-cache
+#        with:
+#          path: ~/.cache/pip
+#          key: pip-${{ hashFiles('**/pyproject.toml') }}
+#      - name: Upgrade Pip
+#        run: python -m pip install --upgrade pip
+#      - name: Install Poetry
+#        run: python -m pip install poetry
+#      - name: Set up Poetry cache
+#        uses: actions/cache@v2
+#        id: poetry-cache
+#        with:
+#          path: ~/.cache/pypoetry/virtualenvs
+#          key: poetry-${{ hashFiles('**/poetry.lock') }}
+#      - name: Install dependencies
+#        run: |
+#          poetry run pip install --upgrade pip
+#          poetry install
 
 #  lint:
 #    name: Lint
